--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".SettingsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InfoActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".PurchaseActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".UpdateSalaryActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".UpdateSalaryActivity"/>
+        <activity android:name=".InfoActivity" />
     </application>
 
 </manifest>
